--- a/css/css-skeletons.scss
+++ b/css/css-skeletons.scss
@@ -7,7 +7,7 @@
   --c-p: 10px;
   --bg:#E2E1EB;
   --c-bg: transparent;
-  --shine:#eaeaf1;
+  --shine: rgba(255,255,255, 0.2);
   --t: 2s;
   --c-s: 40px;
   --rect-h: 80px;
@@ -56,9 +56,9 @@
   
     &::before,
     &::after {
-      --mask: linear-gradient(#000 0 var(--l-h),transparent var(--l-h) calc(var(--l-h) + var(--l-gap))) 0 0/100% calc(var(--l-h) + var(--l-gap));
-      -webkit-mask: var(--mask);
-              mask: var(--mask);
+      --m: linear-gradient(#000 0 var(--l-h),transparent var(--l-h) calc(var(--l-h) + var(--l-gap))) 0 0/100% calc(var(--l-h) + var(--l-gap));
+      -webkit-mask: var(--m);
+              mask: var(--m);
     }
   }
 
@@ -68,9 +68,9 @@
   
     &::before,
     &::after {
-      --mask: radial-gradient(calc(var(--c-s) / 2) calc(var(--c-s) / 2) at 50% 50%,#000 98%,transparent 100%) 0 50% / var(--c-s) var(--c-s) no-repeat;
-      -webkit-mask: var(--mask);
-              mask: var(--mask);
+      --m: radial-gradient(calc(var(--c-s) / 2) calc(var(--c-s) / 2) at 50% 50%,#000 98%,transparent 100%) 0 50% / var(--c-s) var(--c-s) no-repeat;
+      -webkit-mask: var(--m);
+              mask: var(--m);
     }
   }
 
@@ -79,10 +79,10 @@
   
     &::before,
     &::after {
-      --mask: radial-gradient(calc(var(--c-s) / 2) calc(var(--c-s) / 2) at 50% 50%,#000 98%,transparent 100%) 0 50% / calc(var(--c-s)) calc(var(--c-s)),
+      --m: radial-gradient(calc(var(--c-s) / 2) calc(var(--c-s) / 2) at 50% 50%,#000 98%,transparent 100%) 0 50% / calc(var(--c-s)) calc(var(--c-s)),
               var(--lin) calc(var(--c-s) + var(--g-gap)) 50%/100% var(--l-h);
-      -webkit-mask: var(--mask);
-      mask: var(--mask);
+      -webkit-mask: var(--m);
+      mask: var(--m);
       -webkit-mask-repeat: no-repeat;
               mask-repeat: no-repeat;
     }
@@ -93,10 +93,10 @@
   
     &::before,
     &::after {
-      --mask: radial-gradient(calc(var(--c-s) / 2) calc(var(--c-s) / 2) at 50% 50%,#000 98%,transparent 100%) 0 50% / calc(var(--c-s)) calc(var(--c-s)) no-repeat,
+      --m: radial-gradient(calc(var(--c-s) / 2) calc(var(--c-s) / 2) at 50% 50%,#000 98%,transparent 100%) 0 50% / calc(var(--c-s)) calc(var(--c-s)) no-repeat,
               linear-gradient(#000 0 var(--l-h), transparent var(--l-h) calc(var(--l-h) + var(--l-gap))) calc(var(--c-s) + var(--g-gap)) 0%/100% calc(var(--l-h) + var(--l-gap)) no-repeat repeat;
-      -webkit-mask: var(--mask);
-              mask: var(--mask);
+      -webkit-mask: var(--m);
+              mask: var(--m);
     }
   
     &.adapt-to-circle {
@@ -115,27 +115,27 @@
   
     &::before,
     &::after {
-      --mask: var(--lin) 0 0/100% var(--rect-h) no-repeat, 
+      --m: var(--lin) 0 0/100% var(--rect-h) no-repeat, 
               repeating-linear-gradient(#000 0 var(--l-h), transparent var(--l-h) calc(var(--l-h) + var(--l-gap))) 0 calc(var(--rect-h) + var(--g-gap)) / 100% calc(100% - (var(--rect-h) + var(--g-gap))) no-repeat;
-      -webkit-mask: var(--mask);
-              mask: var(--mask);
+      -webkit-mask: var(--m);
+              mask: var(--m);
     }
   }
 
-  &#{$s}-chart-area {
+  &#{$s}-chart-line {
     --chart-btm: 40px;
     --chart-h: 200px;
     height: var(--chart-h);
     
     &::before,
     &::after {
-      --mask: var(--lin) 0 100% / 100% var(--chart-btm) no-repeat,
+      --m: var(--lin) 0 100% / 100% var(--chart-btm) no-repeat,
               linear-gradient(to left bottom,transparent 0 49.5%, #000 50% 100%) left 0 bottom var(--chart-btm) / calc((var(--c-w) / 10) * 2) calc(var(--chart-h) / 2) no-repeat,
               linear-gradient(to right bottom,transparent 0 49.5%, #000 50% 100%) left calc((var(--c-w) / 10) * 2) bottom var(--chart-btm) / calc((var(--c-w) / 10) * 3) calc(var(--chart-h) - var(--chart-btm)) no-repeat,
               linear-gradient(to left bottom,transparent 0 49.5%, #000 50% 100%) left calc((var(--c-w) / 10) * 5) bottom var(--chart-btm) / calc((var(--c-w) / 10) * 3) calc(var(--chart-h) - var(--chart-btm)) no-repeat,
               linear-gradient(to right bottom,transparent 0 49.5%, #000 50% 100%) left calc((var(--c-w) / 10) * 8) bottom var(--chart-btm) / calc((var(--c-w) / 10) * 2.5) calc(var(--chart-h) / 2.5) no-repeat;
-      -webkit-mask: var(--mask);
-              mask: var(--mask);
+      -webkit-mask: var(--m);
+              mask: var(--m);
     }
   }
 
@@ -150,7 +150,7 @@
     
     &::before,
     &::after {
-      --mask: var(--lin) 0 100% / var(--col-w) calc((var(--chart-h) / 10) * 4),
+      --m: var(--lin) 0 100% / var(--col-w) calc((var(--chart-h) / 10) * 4),
               var(--lin) calc(var(--o-l)) 100% / var(--col-w) calc((var(--chart-h) / 10) * 3),
               var(--lin) calc(var(--o-l) * 2) 100% / var(--col-w) calc((var(--chart-h) / 10) * 6),
               var(--lin) calc(var(--o-l) * 3) 100% / var(--col-w) calc((var(--chart-h) / 10) * 8),
@@ -160,8 +160,8 @@
               var(--lin) calc(var(--o-l) * 7) 100% / var(--col-w) calc((var(--chart-h) / 10) * 9),
               var(--lin) calc(var(--o-l) * 8) 100% / var(--col-w) calc((var(--chart-h) / 10) * 2),
               var(--lin) calc(var(--o-l) * 9) 100% / var(--col-w) calc((var(--chart-h) / 10) * 7);
-      -webkit-mask: var(--mask);
-              mask: var(--mask);
+      -webkit-mask: var(--m);
+              mask: var(--m);
       -webkit-mask-repeat: no-repeat;
               mask-repeat: no-repeat;
     }
@@ -178,7 +178,7 @@
   
     &::before,
     &::after {
-      --mask: var(--lin) 0 0 / calc(var(--c-w) / 4) var(--card-h),
+      --m: var(--lin) 0 0 / calc(var(--c-w) / 4) var(--card-h),
               var(--lin) calc((var(--c-w) / 4) + var(--g-gap)) 0 / calc(var(--c-w) - ((var(--c-w) / 4) + var(--g-gap))) calc(var(--card-h) / 5),
               var(--lin) calc((var(--c-w) / 4) + var(--g-gap)) calc(var(--card-h) / 3) / calc(var(--c-w) - ((var(--c-w) / 4) + var(--g-gap))) calc(var(--card-h) / 8),
               var(--lin) calc((var(--c-w) / 4) + var(--g-gap)) calc(var(--card-h) / 1.8) / calc(var(--c-w) - ((var(--c-w) / 4) + var(--g-gap))) calc(var(--card-h) / 8),
@@ -186,8 +186,59 @@
               var(--lin) left var(--l-x) bottom calc((var(--c-s) - (var(--card-h) / 8)) / 2) / var(--l-w) calc(var(--card-h) / 8),
               radial-gradient(calc(var(--c-s) / 2) calc(var(--c-s) / 2) at 50% 50%,#000 98%,transparent 100%) calc(var(--l-x) + var(--l-w) + var(--g-gap)) 100% / calc(var(--c-s)) calc(var(--c-s)),
               var(--lin) left calc(var(--l-x) + var(--l-w) + var(--c-s) + var(--g-gap) + var(--l-gap)) bottom calc((var(--c-s) - (var(--card-h) / 8)) / 2) / var(--l-w) calc(var(--card-h) / 8);
-      -webkit-mask: var(--mask);
-              mask: var(--mask);
+      -webkit-mask: var(--m);
+              mask: var(--m);
+      -webkit-mask-repeat: no-repeat;
+              mask-repeat: no-repeat;
+    }
+  }
+
+  &#{$s}-card-2 {
+    --f-l-w: 90%;
+    --f-l-h: 25px;
+    --f-l-c:rgba(103,89,255,0.3);
+    --s-l-w: 70%;
+    --s-l-h: 20px;
+    --s-l-c: rgba(54,216,175,0.3);
+    --s-l-m-t: 15px;
+
+    height: calc(var(--f-l-h) + var(--s-l-m-t) +  var(--s-l-h) + var(--g-gap) + ((var(--l-h) * var(--lines)) + (var(--l-gap) * (var(--lines) - 1))));
+
+    &::before,
+    &::after {
+      --top: calc(var(--f-l-h) + var(--s-l-m-t) + var(--s-l-h) + var(--g-gap));
+      --m: var(--lin) 0 0/var(--f-l-w) var(--f-l-h),
+              var(--lin) 0 calc(var(--f-l-h) + var(--s-l-m-t)) / var(--s-l-w) var(--s-l-h),
+              var(--lin) 0 var(--top) / 100% var(--l-h),
+              var(--lin) 0 calc(var(--top) + (var(--l-h) + var(--l-gap))) / 100% var(--l-h),
+              var(--lin) 0 calc(var(--top) + ((var(--l-h) + var(--l-gap)) * 2)) / 80% var(--l-h),
+              var(--lin) 0 calc(var(--top) + ((var(--l-h) + var(--l-gap)) * 3)) / 100% var(--l-h),
+              var(--lin) 0 calc(var(--top) + ((var(--l-h) + var(--l-gap)) * 4)) / 100% var(--l-h),
+              var(--lin) 0 calc(var(--top) + ((var(--l-h) + var(--l-gap)) * 5)) / 80% var(--l-h);
+      -webkit-mask: var(--m);
+              mask: var(--m);
+      -webkit-mask-repeat: no-repeat;
+              mask-repeat: no-repeat;
+    }
+
+    &::before {
+      background: linear-gradient(var(--f-l-c), var(--f-l-c)) 0 0/var(--f-l-w) var(--f-l-h) no-repeat,
+                  linear-gradient(var(--s-l-c), var(--s-l-c)) 0 calc(var(--f-l-h) + var(--s-l-m-t)) /var(--s-l-w) var(--s-l-h) no-repeat,
+                  var(--bg);
+    }
+  }
+
+  &#{$s}-list {
+    --b: calc(var(--l-h) * 1.4);
+    --p: calc((var(--b) - var(--l-h)) / 2);
+    height: calc(var(--b) + ((var(--b) + var(--l-gap)) * (var(--lines) - 1)));
+    
+    &::before,
+    &::after {
+      --m: repeating-linear-gradient(to bottom, #000 0 var(--b), transparent var(--b) calc(var(--b) + var(--l-gap))) 0 0 / var(--b) 100%,
+              repeating-linear-gradient(to bottom, transparent 0 var(--p), #000 var(--p) calc(var(--p) + var(--l-h)), transparent calc(var(--p) + var(--l-h)) calc(calc(var(--p) * 2 + var(--l-gap) + var(--l-h)))) calc(var(--b) + var(--g-gap)) 0 / calc(var(--c-w) - (var(--b) + var(--g-gap))) 100%;
+      -webkit-mask: var(--m);
+              mask: var(--m);
       -webkit-mask-repeat: no-repeat;
               mask-repeat: no-repeat;
     }
